# NeuralOne

./: CMakeLists.txt  ElmanNeural.cpp  ElmanNeural.h  MathMatrix.cpp  MathMatrix.h  NeuralNet.cpp  NeuralNet.h  PictureStream.cpp  PictureStream.h  PixelMatrix.cpp  PixelMatrix.h  PixelRGB.cpp  PixelRGB.h  elman.cpp  main.cpp
